# servicecycle

./: .dependency-cruiser.cjs  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .semgrepignore  .stylelintrc.json  .trivyignore  ARC_FLASH_AI_VALIDATION.md  ARC_FLASH_DOMAIN_MODEL.md  ARC_FLASH_PE_REVIEW_WORKSHEET.md  ARC_FLASH_ROADMAP.md  ArcFlash_Format_Sources.html  CHANGELOG.md  CHUNK_B_SALES_ROLLUP_DESIGN.md  COMPETITOR_REPORTING_ANALYSIS.md  CONTRIBUTING.md  KICKOFF.md  LICENSE  NOTICE  OVERNIGHT_ARCFLASH_PROMPT.md  OVERNIGHT_REPORT.md  OVERNIGHT_SAMPLES_ACCURACY.md  QA_REPORT.md  README.md  SECURITY.md  SECURITY_AUDIT_2026-06-09.md  ServiceCycle_ArcFlash_PE_Review.xlsx  TOOLING_ADOPTION_STATUS.md  _p.py  arc-flash-sample-pdfs.html  deploy-sc-client.ps1  deploy-sc-server.ps1  docker-compose.demo.yml  docker-compose.ghcr.yml  docker-compose.livecheck-realworld.yml  docker-compose.livecheck.yml  docker-compose.polis.yml  (+9 more)
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
brand/: brand.md  logo-final-wordmarks-v2.html  logo-final-wordmarks.html  logo-options-E.html  logo-options-v2.html  logo-options-v3.html  logo-options-v4.html  logo-options.html
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic_usage.py  quickstart.ipynb
sdk/python/servicecycle/: __init__.py  _util.py  client.py  errors.py  http.py  paginator.py
sdk/python/servicecycle/resources/: arcflash.py  assets.py  contractors.py  deficiencies.py  identity.py  telemetry.py  workorders.py
(+1608 files in other folders)
