[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "servicecycle-sdk"
version = "0.1.0"
description = "Official Python SDK for the ServiceCycle Public API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ServiceCycle" }]
dependencies = []

[project.urls]
Homepage = "https://servicecycle.app"
Documentation = "https://servicecycle.app/docs/api"

[tool.setuptools.packages.find]
include = ["servicecycle*"]
